Bug 431372 - Loading page color is white when invert Luma/lightness is enabled
Summary: Loading page color is white when invert Luma/lightness is enabled
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-01-09 23:47 UTC by itsbluediting2
Modified: 2021-04-05 14:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description itsbluediting2 2021-01-09 23:47:51 UTC
SUMMARY


STEPS TO REPRODUCE
1. Load a pdf
2. Enable invert lightness or invert luma in accessibility settings
3. Quickly scroll through or zoom using ctrl+mouse wheel 

OBSERVED RESULT
Loading pages have a white background.

EXPECTED RESULT
Dark loading pages, as seen when "Invert Colors" is enabled

SOFTWARE/OS VERSIONS
Windows: 10, 10.0.18363

ADDITIONAL INFORMATION
Couldn't find my version in the dropdown list, I am using Okular 20.04.0 downloaded from chocolatey
Comment 1 Bug Janitor Service 2021-04-04 12:48:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/okular/-/merge_requests/395
Comment 2 Laura David Hurka 2021-04-04 13:52:37 UTC
Git commit 01c240c06db0e7946536dbf969a7fec9686f940a by David Hurka.
Committed on 04/04/2021 at 12:46.
Pushed by davidhurka into branch 'release/21.04'.

Fix white background flashing up when using Invert Lightness/Luma

These color modes make white background black,
but PagePainter wasn’t updated to draw black background
when pixmaps are not yet available.

M  +3    -0    part/pagepainter.cpp

https://invent.kde.org/graphics/okular/commit/01c240c06db0e7946536dbf969a7fec9686f940a