Fix white background flashing up when using Invert Lightness/Luma

These color modes make white background black,
but PagePainter wasn’t updated to draw black background
when pixmaps are not yet available.

BUG: 431372